# sample-core-twelve-factor

./: .gitignore  README.md  docker-compose.yml
docker/app/: Dockerfile
docker/localstack/appconfig/compose-volumes/etc/localstack/init/ready.d/: init_appconfig.sh
docker/localstack/dynamodb/compose-volumes/etc/localstack/init/ready.d/: init_dynamodb.sh
sample-core-twelve-factor-impl/: pyproject.toml
sample-core-twelve-factor-impl/src/: app.py
sample-core-twelve-factor-impl/src/conf/: mock_response.py
sample-core-twelve-factor-impl/src/helper/: config_helper.py
